[package]
name = "maya-types"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scraper = "*"
itertools = "*"
regex = "*"
lazy_static = "*"
rayon = "*"
once_cell = "1.18.0"
clap = { version = "4.3.11", features = ["derive"] }
